<resources>
    <string name="app_name">RecipesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="details_placeholder">%1$s - %2$s - %3$s</string>
    <string name="recipes_menu">Todo</string>
    <string name="saved_menu">Guardadas</string>
    <string name="search_menu">Buscar</string>
    <string name="recipe_img_description">Imagen de un alimento</string>
    <string name="ingredients">Ingredientes</string>
    <string name="instructions">Preparación</string>
    <string name="details_img_description">Image de la receta</string>
    <string name="save_recipe">Guardar</string>
    <string name="search_hint">Nombre o Autor</string>
    <string name="recipe_not_found">No se encontraron recetas</string>
    <string name="loading_error">Error: %1$s</string>
    <string name="empty_error">Algo salio mal. Intente nuevamente</string>
    <string name="error_string">Algo salio mal.\nIntente nuevamente</string>
    <string name="btn_retry">Recargar</string>
    <string name="search_btn">Buscar</string>
    <string name="search">Search</string>
    <string name="settings">Ajustes</string>
    <string name="dark_theme">Modo oscuro</string>
    <string name="dark_mode_description">Activa el modo oscuro</string>
    <string name="dark_theme_content">Modo oscuro</string>
</resources>